assets/css/main.scss
---
---
@import '../_sass/normalize.scss';
// http://hugeinc.github.io/flexboxgrid-sass/
@import '../_sass/flexboxgrid.scss';

html, body {
  font-family: 'Varela Round', sans-serif;
  letter-spacing: 0.2px;
  letter-spacing: 0.01rem;
}
h2 {
  font-weight: normal;
}
a {
  color: inherit;
}
[data-url] {
  cursor: pointer;
}
.masthead {
  touch-action: none;
}
hr {
  opacity: 0.3;
  margin: 30px auto;
  border: none;
  border-top: 1px solid #ccc;
}

.underline {
  text-decoration: none;
  display: inline;
  border-color: inherit;
  border-bottom: 1px solid;
}
.highlight {
  display: inline;
  border-radius: 3px 3px 0 0;
  border-bottom: 1px solid #007baa; 
  background-color:  #007bff22;
  text-decoration: none;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 3px;
  padding-right: 3px;

  position: relative;
  cursor: pointer;
}
.highlight_tooltip {
  visibility: hidden;
  width: 400px;
  background-color: black;
  border: 1px solid rgba(255,255,255,0.2);
  color: #fff;
  text-align: left;
  border-radius: 6px;
  padding: 10px 20px;

  /* Position the tooltip */
  position: absolute;
  top: 110%;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1;
}

.highlight:hover .highlight_tooltip {
  visibility: visible;
}
.underline-none {
  text-decoration: none;
}
.link-image {
  display: block;
  text-decoration: none;
}
::placeholder {
    color: gray;
  }
.colorful {
    color: red;
    &--very {
        transform: translate-y(30deg);
        font-weight: bold;
    }
}

$sides: (top, bottom, left, right); // Leave this variable alone
@for $i from 0 through 20 {
    @each $side in $sides {
      .m#{str-slice($side, 0, 1)}-#{$i*5} {
        margin-#{$side}: #{$i*5}px !important;
      }
      .p#{str-slice($side, 0, 1)}-#{$i*5} {
        padding-#{$side}: #{$i*5}px !important;
      }
    }
}

.nm-x-20 {
  margin: 0 -20px;
}

.no-break {
  white-space: nowrap;
}

.wrap-word {
    white-space: normal;
}

.hidden {
  font-size: 0;
  line-height: 0;
  color: transparent;
}

.logo {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  transition: 0.25s width ease-in, 0.25s top ease-in;
  width: 115px;
  @media only screen and (min-width: 48em) {
    width: 100%;
  }
  &--home {
    top: 60px;
    width: 200px;
    @media only screen and (min-width: 48em) {
      top: 0;
      width: 100%;
    }
  }
  &--small {
    width: 125px;
    @media only screen and (min-width: 48em) {
      width: 150px;
    }
  }
  &--home-small {
    top: 0;
    width: 125px;
    @media only screen and (min-width: 48em) {
      width: 150px;
    }
  }
  &_container {
    position: relative;
  }
}

.sticky--top {
  position: sticky;
  display: block;
  top: -40px;
  background: white;
  z-index: 1;
}

.nav-list {
    display: inline-block;
    margin: 0;
    padding: 0;
    list-style: none;
    .nav-list-item {
      display: inline-block;
      margin-right: 20px;
    }
    .nav-list-item_link {
      &--active {
        color: #007bff;
        border-bottom: 2px solid;
        border-color: #007bff;
        box-shadow: none;
      }
    }
}
.u-{
  &link-block {
    display: block;
  }
  &nm-left-hard {
    margin-left: -2rem;
    @media only screen and (min-width: 1320px) {
      margin-left: calc(-2rem + 18px - ((100vw - 1320px)/2));
    }
  }
  &nm-right-hard {
    margin-right: -2rem;
    @media only screen and (min-width: 1320px) {
      margin-right: calc(-2rem + 20px - ((100vw - 1320px)/2));
    }
  }
  &w-100 {
    width: 100%;
    display: block;
  }
  &mw-100 {
    max-width: 100%;
  }
  &sh {
    box-shadow: 
    3px 4px 3px rgba(0,0,0,0.05), 
    -3px 2px 3px rgba(0,0,0,0.05), 
    0px 10px 18px rgba(0,0,0,0.15);
  }
  &rounded {
    border-radius: 15px;
    &--left {
      border-radius: 15px 0 0 15px;
    }
    &--right {
      border-radius: 0 15px 15px 0;
    }
    @media only screen and (min-width: 48em) {
      border-radius: 30px;
      &--left {
        border-radius: 30px 0 0 30px;
      }
      &--right {
        border-radius: 0 30px 30px 0;
      }
    }
  }
  &bg-white {
    background-color: #ffffff;
    position: relative;
  }
  &relative {
    position: relative;
  }
  &list {
    padding: 0;
    &_item {
      list-style: outside circle;
      margin-left: 1.2em;
    }
  }
  &btn {
    display: flex;
    border: 1px solid #cccccc;
    padding: 5px 15px;
    border-radius: 6px;
    align-items: center;
    vertical-align: middle;
    box-shadow: 0 3px 0 transparent;
    &:hover {
      color: #333333;
      box-shadow: 0 3px 0 #efefef;
    }
  }
  &video {
    outline: none;
  }
}
/* ... */

